...
          const SizedBox(height: defaultSize),
          AppCard(
            padding: EdgeInsets.zero,
            child: Column(
              children: [
                AppTile(
                  tileKey: const Key('setting.vpn_setting_tile'),
                  label: 'vpn_settings'.i18n,
                  icon: AppImagePaths.glob,
                  onPressed: () => settingMenuTap(_SettingType.vpnSetting),
                ),
                if (unboundedAvailable) ...[
                  DividerSpace(),
...
                    icon: AppImagePaths.widgets,
                    onPressed: () => settingMenuTap(_SettingType.widget),
                  ),
                ],
                DividerSpace(),
                AppTile(
                  tileKey: const Key('setting.appearance_tile'),
                  label: 'appearance'.i18n,
                  icon: AppImagePaths.theme,
                  trailing: Text(
                    appearanceModeLabel(themeMode),
                    style: textTheme.titleMedium!.copyWith(
                      color: context.textLink,
...
