...
      ('system', 'system'.i18n, AppImagePaths.automatic),
      ('light', 'light'.i18n, AppImagePaths.lightMode),
      ('dark', 'dark'.i18n, AppImagePaths.darkMode),
    ];

    return ListView.separated(
      key: const Key('appearance.list'),
      controller: scrollController,
      padding: EdgeInsets.zero,
      shrinkWrap: true,
      itemCount: options.length,
      separatorBuilder: (_, __) => Padding(
        padding: const EdgeInsets.symmetric(horizontal: 16),
...
