...
      radianceSettingsProvider.select((s) => s.blockAds),
    );
    final telemetryConsent = ref.watch(
      radianceSettingsProvider.select((s) => s.telemetry),
    );
    return ListView(
      key: const Key('vpn_setting.list'),
      padding: const EdgeInsets.all(0),
      shrinkWrap: true,
      children: <Widget>[
        AppCard(
          padding: EdgeInsets.zero,
          child: Column(
...
